--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
-
-.title  {
-  
-    color: blue;
+body {
+    font-family: 'Times New Roman' ;
+    text-align:left;
 }
 
-
-h3 {
+h1 {
     color: black;
-  
+   
+}
+
+h2 {
+    color: black;
+   
+}
+
+ul {list-style: circle;
+
+
+
 }
